# Drone_code

./: README.md
1Hardware/FlightControl_board/: Flight_Control_V3.eprj
1Hardware/RemoteControl_board/: Remote_Board.eprj
2HIL_STM32/HIL_FlightControl/: .mxproject  HIL_FlightControl.ioc
2HIL_STM32/HIL_FlightControl/Core/Inc/: stm32f4xx_it.h
2HIL_STM32/HIL_FlightControl/Core/Src/: freertos.c  main.c  stm32f4xx_it.c  usart.c
2HIL_STM32/HIL_FlightControl/MDK-ARM/: HIL_FlightControl.uvguix.dbh  HIL_FlightControl.uvoptx  HIL_FlightControl.uvprojx  startup_stm32f407xx.lst
2HIL_STM32/HIL_FlightControl/MDK-ARM/HIL_FlightControl/: HIL_FlightControl.axf  HIL_FlightControl.build_log.htm  HIL_FlightControl.hex  HIL_FlightControl.htm  HIL_FlightControl.lnp  HIL_FlightControl.map  HIL_FlightControl_HIL_FlightControl.dep  attitude_control.crf  attitude_control.d  cmsis_os.crf  cmsis_os.d  croutine.crf  croutine.d  event_groups.crf  event_groups.d  freertos.crf  freertos.d  globals.crf  globals.d  gpio.crf  gpio.d  heap_4.crf  heap_4.d  list.crf  list.d  main.crf  main.d  mavlink.d  my_mavlink.crf  my_mavlink.d  mytask.crf  mytask.d  (+81 more)
3Simulink_Gazebo/Flight_controller/: CMakeLists.txt
3Simulink_Gazebo/Flight_controller/include/: attitude_control.h  globals.h  my_mavlink.h  planning.h  position_control.h  sensor.h  vision_control.h
3Simulink_Gazebo/Flight_controller/src/: attitude_control.cpp  globals.cpp  main.cpp  my_mavlink.cpp  planning.cpp  sensor.cpp  vision_control.cpp
3Simulink_Gazebo/Gazebo_Model/worlds/: iris_runway.world
4Sitl_gazebo_build/: CMakeLists.txt
(+17 files in other folders)
